// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Textbox component render enableSuccessCheck on validation fail 1`] = `
<View>
  <Styled(View)>
    <View>
      <Styled(Text)
        isFocused="foo"
      >
        input
      </Styled(Text)>
      <Styled(TextInput)
        aria-label="input"
        className="TextBox__input"
        data-locator="input-field"
        enableSuccessCheck={true}
        error="foo"
        id="input"
        keyboardType="default"
        onBlur={[Function]}
        onEndEditing={[Function]}
        onFocus={[Function]}
        returnKeyType="next"
        secureTextEntry={false}
        type="hidden"
        value="foo"
      />
      <Styled(View)>
        <Styled(ImageComp)
          height="12px"
          source={
            Object {
              "testUri": "../../../../core/src/assets/success-icon.png",
            }
          }
          width="15px"
        />
      </Styled(View)>
    </View>
  </Styled(View)>
  <Styled(View)>
    <Styled(View)>
      <Styled(ImageComp)
        height="15px"
        source={
          Object {
            "testUri": "../../../../core/src/assets/alert-triangle.png",
          }
        }
        width="15px"
      />
    </Styled(View)>
    <Styled(BodyCopy)
      color="error"
      fontSize="fs12"
      fontWeight="semibold"
      mobilefontFamily={
        Array [
          "secondary",
        ]
      }
      text="foo"
    />
  </Styled(View)>
</View>
`;

exports[`Textbox component render enableSuccessCheck on validation true 1`] = `
<View>
  <Styled(View)>
    <View>
      <Styled(Text)
        isFocused="foo"
      >
        input
      </Styled(Text)>
      <Styled(TextInput)
        aria-label="input"
        className="TextBox__input"
        data-locator="input-field"
        enableSuccessCheck={true}
        error=""
        id="input"
        keyboardType="default"
        onBlur={[Function]}
        onEndEditing={[Function]}
        onFocus={[Function]}
        returnKeyType="next"
        secureTextEntry={false}
        type="hidden"
        value="foo"
      />
      <Styled(View)>
        <Styled(ImageComp)
          height="12px"
          source={
            Object {
              "testUri": "../../../../core/src/assets/success-icon.png",
            }
          }
          width="15px"
        />
      </Styled(View)>
    </View>
  </Styled(View)>
</View>
`;

exports[`Textbox component renders correctly 1`] = `
<View>
  <View>
    <Styled(Text)
      isFocused="foo"
    >
      input
    </Styled(Text)>
    <Styled(TextInput)
      aria-label="input"
      className="TextBox__input"
      data-locator="input-field"
      enableSuccessCheck={false}
      error=""
      id="input"
      keyboardType="default"
      onBlur={[Function]}
      onEndEditing={[Function]}
      onFocus={[Function]}
      returnKeyType="next"
      secureTextEntry={false}
      type="text"
      value="foo"
    />
  </View>
  <Styled(View) />
</View>
`;

exports[`Textbox component renders correctly hidden textbox 1`] = `
<View>
  <Styled(View)>
    <View>
      <Styled(Text)
        isFocused="foo"
      >
        input
      </Styled(Text)>
      <Styled(TextInput)
        aria-label="input"
        className="TextBox__input"
        data-locator="input-field"
        enableSuccessCheck={false}
        error=""
        id="input"
        keyboardType="default"
        onBlur={[Function]}
        onEndEditing={[Function]}
        onFocus={[Function]}
        returnKeyType="next"
        secureTextEntry={false}
        type="hidden"
        value="foo"
      />
    </View>
  </Styled(View)>
</View>
`;
